--- a/ap.html
+++ b/ap.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column text-center">
       <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">H | S</h3>
