--- a/ap.html
+++ b/ap.html
@@ -20,9 +20,9 @@
 
   <body>
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
-        <div class="inner">
+        <div class="inner text-center">
           <h3 class="masthead-brand">H | S</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="index.html">HOME</a>
