Fixed Lone Light website link

--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                 <h5 class="card-title">Lone Light</h5>
                 <p class="card-text">Construct 2</p>
                 <p class="card-text">An atmospheric puzzle game about a source of light, alone in the universe trying to find its identity</p>
-                <a href="https://hessamshar.com/lonelight" target="_blank" " class="card-link"><i class="fas fa-link fa-2x"></i></a>
+                <a href="http://www.hessamshar.com/lonelight" target="_blank" " class="card-link"><i class="fas fa-link fa-2x"></i></a>
               </div>
             </div>
           </div>
