Added Windows store link for Gerdi

--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,7 @@
                 <p class="card-text">Construct 2, Android, UWP</p>
                 <p class="card-text">A mobile game about collecting points by collecting circles that match the color of the background</p>
                 <a href="https://play.google.com/store/apps/details?id=com.Aimplay.Gerdi" target="_blank" " class="card-link"><i class="fab fa-google-play fa-2x"></i></a>
+                <a href="https://www.microsoft.com/en-ca/store/p/gerdi/9wzdncrdszqq" target="_blank" " class="card-link"><i class="fab fa-windows fa-2x"></i></a>
               </div>
             </div>
           </div>
