--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <main role="main" class="inner cover">
         <h1 class="cover-heading">HESSAMODDIN SHARIFPOUR</h1>
-        <p class="lead">I'm currently a third year computer science student, specializing in software engineering, at the University of Toronto.</p>
+        <p class="lead">I'm currently a forth year computer science student, specializing in software engineering, at the University of Toronto.</p>
         <a href="https://github.com/HessamoddinS" target="_blank"><i class="fab fa-github fa-2x"></i></a>&nbsp;
         <a href="https://twitter.com/HessamoddinS" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>&nbsp;
         <a href="https://www.linkedin.com/in/hessamshar" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>&nbsp;
@@ -43,7 +43,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>© 2018 Copyright Hessamoddin Sharifpour</p>
+          <p>© 2019 Copyright Hessamoddin Sharifpour</p>
         </div>
       </footer>
     </div>
